@@ -64,6 +64,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   and the dupes removed from the default skin files.
   Skins can still override the default rules.
 * (bug 1229) Balance columns in diff display evenly
+* Right-align diff line numbers in RTL language display
 
 
 == MediaWiki API changes since 1.10 ==
